@@ -39,6 +39,8 @@ AC_PREREQ([2.64])
 AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE(foreign no-dist)
 
+AM_MAINTAINER_MODE
+
 # Build a DLL on Windows
 # AC_LIBTOOL_WIN32_DLL
 AC_PROG_CXX
